--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 # Project exclude paths
 /cmake-build-debug/
 /venv/
+/CMakeFiles/
+/cmake_install.cmake
+/CMakeCache.txt
+/Makefile
+/quadratic-sieve
+/output.csv
